# ml-zoomcamp

./: .envrc  .gitignore  docker-compose.yml  dockerfile  gateway.py  pyproject.toml  readme.md  skaffold.yaml
ch1/homework/: readme.md  solution.ipynb
ch2/: Dockerfile  api.py  car_price.ipynb  car_price_final_model.ipynb  ch2_util.py  test.ipynb
ch2/homework/: readme.md  solution.ipynb
ch2/model/: car_price.joblib  car_price.onnx  proprocess.joblib
ch3/: churn.ipynb
ch3/homework/: readme.md  solution.ipynb
ch4/: churn.ipynb
ch4/homework/: readme.md  solution.ipynb
ch6/: course.ipynb
ch6/homework/: readme.md  solution.ipynb
ch8/: 0_pretrained.ipynb
ch8/homework/: readme.md  solution.ipynb
data/: fetch.ipynb
inference/: dockerfile  inference.py  pyproject.toml  readme.md
k8s/: ch2-inference-server-deployment.yaml  ch2-inference-server-service.yaml  gateway-deployment.yaml  gateway-service.yaml  ingress.yaml  ingressRoute.yaml  note.ipynb
proto/: dtypes.proto  inference.proto  input.proto  output.proto
